--- a/requirements.txt
+++ b/requirements.txt
@@ -10,8 +10,11 @@ charset-normalizer==3.4.2
 click==8.1.8
 cloudpathlib==0.21.1
 confection==0.1.5
+contourpy==1.3.2
+cycler==0.12.1
 cymem==2.0.11
 filelock==3.18.0
+fonttools==4.58.4
 fsspec==2025.5.1
 gitdb==4.0.12
 GitPython==3.1.44
@@ -22,11 +25,13 @@ Jinja2==3.1.6
 joblib==1.5.1
 jsonschema==4.24.0
 jsonschema-specifications==2025.4.1
+kiwisolver==1.4.8
 langcodes==3.5.0
 language_data==1.3.0
 marisa-trie==1.2.1
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
+matplotlib==3.10.3
 mdurl==0.1.2
 murmurhash==1.0.13
 narwhals==1.42.1
@@ -35,6 +40,7 @@ numpy==2.0.2
 packaging==24.2
 pandas==2.3.0
 pillow==11.2.1
+plotly==6.1.2
 preshed==3.0.10
 protobuf==6.31.1
 pyarrow==20.0.0
@@ -42,6 +48,7 @@ pydantic==2.11.7
 pydantic_core==2.33.2
 pydeck==0.9.1
 Pygments==2.19.1
+pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 pytz==2025.2
 PyYAML==6.0.2
@@ -53,6 +60,7 @@ rpds-py==0.25.1
 safetensors==0.5.3
 scikit-learn==1.6.1
 scipy==1.13.1
+setuptools==80.9.0
 shellingham==1.5.4
 six==1.17.0
 smart-open==7.1.0
@@ -78,4 +86,5 @@ tzdata==2025.2
 urllib3==2.4.0
 wasabi==1.1.3
 weasel==0.4.1
+wordcloud==1.9.4
 wrapt==1.17.2
