--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ charset-normalizer==3.4.2
 click==8.1.8
 cloudpathlib==0.21.1
 confection==0.1.5
-contourpy==1.3.2
+contourpy==1.3.0
 cycler==0.12.1
 cymem==2.0.11
 filelock==3.18.0
@@ -21,17 +21,18 @@ GitPython==3.1.44
 hf-xet==1.1.3
 huggingface-hub==0.33.0
 idna==3.10
+importlib_resources==6.5.2
 Jinja2==3.1.6
 joblib==1.5.1
 jsonschema==4.24.0
 jsonschema-specifications==2025.4.1
-kiwisolver==1.4.8
+kiwisolver==1.4.7
 langcodes==3.5.0
 language_data==1.3.0
 marisa-trie==1.2.1
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
-matplotlib==3.10.3
+matplotlib==3.9.4
 mdurl==0.1.2
 murmurhash==1.0.13
 narwhals==1.42.1
@@ -60,7 +61,6 @@ rpds-py==0.25.1
 safetensors==0.5.3
 scikit-learn==1.6.1
 scipy==1.13.1
-setuptools==80.9.0
 shellingham==1.5.4
 six==1.17.0
 smart-open==7.1.0
@@ -88,3 +88,4 @@ wasabi==1.1.3
 weasel==0.4.1
 wordcloud==1.9.4
 wrapt==1.17.2
+zipp==3.23.0
